# fft-freezer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
